@@ -108,21 +108,20 @@ float4 ps_main_stereo(in VS_OUTPUT_2D IN) : COLOR
 	const bool yaxis = (ms_zpd_ya_td.z != 0.0); //!! uniform
 	const bool topdown = (ms_zpd_ya_td.w != 0.0); //!! uniform
 	const int y = w_h_height.z*u.y;
-	const bool aa = (w_h_height.w != 0.0); //!! uniform
 	const bool l = topdown ? (u.y < 0.5) : ((y+1)/2 == y/2); //last check actually means (y&1)
 	if(topdown) { u.y *= 2.0; if(!l) u.y -= 1.0; }  //!! !topdown: (u.y+w_h_height.y) ?
 	const float su = l ? MaxSeparation : -MaxSeparation;
 	float minDepth = min(min(tex2Dlod(texSamplerDepth, float4(u + (yaxis ? float2(0.0,0.5*su) : float2(0.5*su,0.0)), 0.,0.)).x, tex2Dlod(texSamplerDepth, float4(u + (yaxis ? float2(0.0,0.666*su) : float2(0.666*su,0.0)), 0.,0.)).x), tex2Dlod(texSamplerDepth, float4(u + (yaxis ? float2(0.0,su) : float2(su,0.0)), 0.f,0.f)).x);
-	float parallax = MaxSeparation - min(MaxSeparation*ZPD/(0.5*ZPD+minDepth*(1.0-0.5*ZPD)), MaxSeparation);
+	float parallax = (w_h_height.w+MaxSeparation) - min(MaxSeparation/(0.5+minDepth*(1.0/ZPD-0.5)), MaxSeparation);
 	if(!l)
 		parallax = -parallax;
 	if(yaxis)
 		parallax = -parallax;
 	const float3 col = tex2Dlod(texSampler5, float4(u + (yaxis ? float2(0.0,parallax) : float2(parallax,0.0)), 0.f,0.f)).xyz;
-	if(!aa)
-		return float4(col, 1.0f); // otherwise blend with 'missing' scanline
+	//if(!aa)
+	//	return float4(col, 1.0f); // otherwise blend with 'missing' scanline
 	minDepth = min(min(tex2Dlod(texSamplerDepth, float4(u + (yaxis ? float2(0.0,0.5*su+w_h_height.y) : float2(0.5*su,w_h_height.y)), 0.f,0.f)).x, tex2Dlod(texSamplerDepth, float4(u + (yaxis ? float2(0.0,0.666*su+w_h_height.y) : float2(0.666*su,w_h_height.y)), 0.f,0.f)).x), tex2Dlod(texSamplerDepth, float4(u + (yaxis ? float2(0.0,su+w_h_height.y) : float2(su,w_h_height.y)), 0.f,0.f)).x);
-	parallax = MaxSeparation - min(MaxSeparation*ZPD/(0.5*ZPD+minDepth*(1.0-0.5*ZPD)), MaxSeparation);
+	parallax = (w_h_height.w+MaxSeparation) - min(MaxSeparation/(0.5+minDepth*(1.0/ZPD-0.5)), MaxSeparation);
 	if(!l)
 		parallax = -parallax;
 	if(yaxis)
