@@ -229,6 +229,9 @@ VP 10.0.0 Changelog
 
 - add third mode for FXAA: extreme (and retweak the quality FXAA mode)
 
+- removed stereo 3D AA, its always enabled now
+- added stereo 3D offset, which can be used to offset the table "into" the monitor
+
 - adaptive vsync works again, it will disable vsync automatically if FPS drop below monitor refresh rate (not on windows XP though due to missing functionality there)
   enable it by setting the FPS Limiter to 2 (1 will still be using 'real' VSync and any number above the monitor refresh rate (usually 60Hz) will just limit the FPS)
 
